# CS2-Chroma

./: .gitignore  .pre-commit-config.yaml  LICENSE  chroma_controls.py  chroma_manager.py  color_conversions.py  cs2_chroma.spec  gamestate_integration_razerchroma.cfg  gsi_manager.py  main.py  pyproject.toml  readme.md  start.bat  utils.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  build.yml  ruff.yml
src/: chroma_manager.py  chroma_models.py  color_conversions.py  effects.py  gsi_manager.py  main.py  media_manager.py  utils.py
