[project]
name = "cs2-chroma"
license = "MIT"
version = "0.1.7"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "winrt-windows-foundation>=3.2.1",
    "winrt-windows-media-control>=3.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyinstaller>=6.19.0",
]

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "E",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "PTH",
    "PYI",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SIM",
    "TID",
    "UP",
    "W"
]
ignore = [
    "E501"
]
